ft(rate-accommodation): this branch ensure that a user can rate accommodation [Starts #170766107]
